<resources>
    <string name="app_name">DotPic</string>
    <string name="my_gallery">My Gallery</string>
    <string name="my_fave">My Fave</string>
    <string name="title_activity_edit">Edit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="picName">Kitty</string>
    <string name="picSize">Size:</string>
    <string name="dot">Dot!</string>

    <string name="canvas">Canvas</string>
    <string name="rename">Rename</string>
    <string name="clear">Clear</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="lang_set_title">Choose a language</string>
    <string name="lang_set_cancel">Cancel</string>
    <string-array name="lang_select">
        <item>English</item>
        <item>中文</item>
    </string-array>
    <string name="lang_set_ok">OK</string>
</resources>
