<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/canvas">
        <menu>
            <item
                android:id="@+id/rename"
                android:title="@string/rename"
                android:icon="@mipmap/rename" />
            <item
                android:id="@+id/clear"
                android:title="@string/clear"
                android:icon="@mipmap/clear" />
            <item
                android:id="@+id/export"
                android:title="@string/export"
                android:icon="@mipmap/export" />
            <item
                android:id="@+id/share"
                android:title="@string/share"
                android:icon="@mipmap/share" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
              <item
                  android:id="@+id/settings"
                  android:title="@string/settings"
                  android:icon="@mipmap/settings" />

        </menu>
    </item>
</menu>